--- a/front/style.css
+++ b/front/style.css
@@ -1,59 +1,97 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background: #f0f0f0;
+  font-family: Arial, sans-serif;
+  margin: 20px;
+  background: #f0f0f0;
 }
 
-h1, h2 {
-    color: #333;
+h1,
+h2 {
+  color: #333;
 }
 
 button {
-    padding: 10px 20px;
-    background-color: #0275d8;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    margin-top: 10px;
-    cursor: pointer;
+  padding: 10px 20px;
+  background-color: #0275d8;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
 button:hover {
-    background-color: #025aa5;
+  background-color: #025aa5;
 }
 
 .form {
-    margin: 10px 0;
-    display: flex;
-    gap: 10px;
+  margin: 10px 0;
+  display: flex;
+  gap: 10px;
 }
 
 .form input {
-    padding: 10px;
-    border-radius: 6px;
-    border: 1px solid #bbb;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #bbb;
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-top: 20px;
 }
 
 .card {
-    background: white;
-    width: 250px;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0 0 6px #999;
+  background: white;
+  width: 250px;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 6px #999;
+  gap: 5%;
 }
 
 .card h3 {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .btn-delete {
+  background-color: red;
+  margin-top: 10px;
+}
+.btn-alterar {
+  background-color: #025aa5;
+  margin-top: 10px;
+}
+#fechar-janela {
     background-color: red;
-    margin-top: 10px;
+}
+/* #listagem{
+    position: relative;
+} */
+#lista-alterar {
+  width: 30%;
+  height: auto;
+  position: fixed;
+  z-index: 1000;
+  left: 1rem;
+  top: 1rem;
+  padding: 3%;
+  top: 30%;
+  left: 30%;
+  display: flex;
+  margin-bottom: 10px;
+  background-color: white;
+  border-radius: 15px;
+  border: black solid 5px;
+}
+#lista-alterar input{
+    margin-top: 5%;
+    display: block;
+}
+#lista-alterar p{
+    color: rgb(0, 0, 0);
+}
+#lista-alterar h1{
+    color: rgb(0, 0, 0);
 }
